--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"ZNWalksConnectionString": "Server=129.227.108.203,1345;Database=WL_RajuKumar;User Id=RajuKumar;Password=Workline##1475;TrustServerCertificate=True;"
-    "ZNWalksConnectionString": "Server=localhost\\MSSQLSERVER01;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "ZNWalksConnectionString": "Server=DESKTOP-G54UMU9\\SQLEXPRESS;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
